--- a/sagen.conf
+++ b/sagen.conf
@@ -4,14 +4,16 @@ next-project-num = 1
 next-sa-num = 1
 sas-per-project = 100
 next-json-key-num = 1
-sleep-time = 5
+sleep-time = 10
 
 ###   Prefixes for the SA email (required), the project (required) and the downloaded json key (optional)
 email-prefix = svcacct
 project-prefix = proj
-# json-key-prefix = keyname        # hash out the line if no json key prefix needed
+# json-key-prefix = keyname             # hash out the line if no json key prefix needed
 
-###   Options below have defaults set in the script, but can be set here as well
-# credentials='credentials/credentials.json'
-# token='credentials/token.pickle'
-# path="accounts"
+path = svcaccts
+token = creds/token.pickle
+group-token = creds/grptoken.pickle     # group token created separately as group can be in a different domain than SAs
+credentials = creds/creds.json
+services = [iam, drive, admin]
+
